<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.DetailFilmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/judul_film" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:text="@string/judul_film"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_horizontal10"
            android:text="@string/year"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/tv_tahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_horizontal10"
            android:textColor="@color/white"
            android:text="@string/tahun"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            style="@style/style_horizontal10"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_horizontal10"
            android:layout_marginTop="10dp"
            android:text="@string/isi_deskripsi"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>